[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/HpBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/hero11.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.8757, 33.6929 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HpBar" parent="." instance=ExtResource( 3 )]
position = Vector2( -30, -45 )

[node name="hero" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 13, 21, 172, 70 )

[node name="hero_jump" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 3
region_enabled = true
region_rect = Rect2( 205, 184, 126, 73 )

[node name="hero_run" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 5
frame = 4
region_enabled = true
region_rect = Rect2( 10, 108, 324, 60 )

[node name="hero_falling" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 349, 177, 48, 78 )

[node name="hero_shoot" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 2
region_enabled = true
region_rect = Rect2( 15, 364, 114, 69 )
